--- a/CalculatorV2/Base.lproj/Main.storyboard
+++ b/CalculatorV2/Base.lproj/Main.storyboard
@@ -29,16 +29,25 @@
                                         <rect key="frame" x="1" y="1" width="79" height="90.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                         <state key="normal" title="C"/>
+                                        <connections>
+                                            <action selector="clearButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ZQh-Ki-cRQ"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AYZ-CK-vm1">
                                         <rect key="frame" x="81" y="1" width="78.5" height="90.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                         <state key="normal" title="+/-"/>
+                                        <connections>
+                                            <action selector="plusMinusButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="lKJ-GZ-Z2Q"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CIt-oY-8UJ">
                                         <rect key="frame" x="160.5" y="1" width="79" height="90.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                         <state key="normal" title="%"/>
+                                        <connections>
+                                            <action selector="persantageButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Ie2-FE-WRm"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dcF-ul-LHO">
                                         <rect key="frame" x="240.5" y="1" width="78.5" height="90.5"/>
@@ -148,6 +157,9 @@
                                         <rect key="frame" x="1" y="367.5" width="79" height="90.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                         <state key="normal" title="√"/>
+                                        <connections>
+                                            <action selector="squareRootButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Cww-TP-mQP"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zia-Hb-D1P">
                                         <rect key="frame" x="81" y="367.5" width="78.5" height="90.5"/>
@@ -161,6 +173,9 @@
                                         <rect key="frame" x="160.5" y="367.5" width="79" height="90.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="40"/>
                                         <state key="normal" title="."/>
+                                        <connections>
+                                            <action selector="dotButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Ium-BB-Zk0"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oXV-Aa-ZK0">
                                         <rect key="frame" x="240.5" y="367.5" width="78.5" height="90.5"/>
